# coffeer

./: .gitignore  Cargo.toml
src/: config.rs  io.rs  main.rs
src/api/: coffee.rs
src/routes/: mod.rs
src/routes/api/: coffee.rs  mod.rs
src/secret_manager/: mod.rs
src/secret_manager/bet_generator/: mod.rs  random.rs
src/web_server/: mod.rs
src/web_server/webpage_generator/: date.rs  mod.rs
src/web_server/webpage_generator/secret_manager/: io.rs  mod.rs
src/web_server/webpage_generator/secret_manager/bet_generator/: mod.rs  random.rs
src/webpage_generator/: date.rs  io.rs  mod.rs
src/webpage_generator/secret_manager/: io.rs  mod.rs
src/webpage_generator/secret_manager/bet_generator/: mod.rs
www/static/: test.html
www/static/coffee/: balance.js  bet.js  fetchUtils.js  index.html  script.js
www/static/test/: index.html  script.js
