[package]
name = "coffeer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
date_time = { version = "2.1.1", features = ["serde_support"] }
once_cell = "1.19.0"
rand_simple = "0.2.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = {version = "1.0.108", features = ["std"] }
warp = "0.3.6"
